# orbit

./: .gitignore  .gitmodules  CMakeLists.txt  Orbit.h  README.md  build.ps1  build.py  build_arm_service.sh  compilation_notes.txt  conanfile.py  deploy_orbitlib.bat  generate_flatbuffers.sh  run.ps1  stop.ps1  vcpkg.json
OrbitAsm/: Orbit.asm  OrbitAsm.h
OrbitBase/: ThreadPool.cpp  Tracing.cpp
OrbitCaptureClient/: CaptureClient.cpp  CaptureEventProcessor.cpp
OrbitClientProtos/: capture_data.proto
OrbitClientServices/: ProcessClient.cpp  ProcessManager.cpp
OrbitCore/: BaseTypes.h  Capture.cpp  Capture.h  ConnectionManager.cpp  CoreApp.h  DiaParser.cpp  Hijacking.cpp  Hijacking.h  LinuxTracingHandler.cpp  Message.h  MiniDump.cpp  OrbitFunction.cpp  OrbitProcess.cpp  Params.cpp  Path.cpp  Pdb.cpp  Pdb.h  PrintVar.h  ScopeTimer.cpp  ScopeTimer.h  Serialization.h  SymbolUtils.cpp  TcpClient.cpp  TcpEntity.h
OrbitGl/: App.cpp  App.h  AsyncTrack.cpp  AsyncTrack.h  Batcher.cpp  Batcher.h  BlackBoard.cpp  CMakeLists.txt  CaptureClient.cpp  CaptureEventProcessor.cpp  CaptureWindow.cpp  CaptureWindow.cpp.orig  CaptureWindow.h  Card.cpp  Card.h  DataManager.cpp  DataManager.h  EventTrack.cpp  Geometry.h  GlCanvas.cpp  GlCanvas.h  GlPanel.cpp  GlSlider.cpp  GlUtils.cpp  GlUtils.h  GpuTrack.cpp  GraphTrack.cpp  GraphTrack.h  HomeWindow.cpp  HomeWindow.h  ImGuiOrbit.cpp  IntrospectionWindow.cpp  LiveFunctionsDataView.cpp  LiveFunctionsDataView.h  ManualInstrumentationManager.cpp  ManualInstrumentationManager.h  OpenGl.h  PluginCanvas.cpp  ProcessManager.cpp  ProcessManager.h  (+19 more)
OrbitLib/: CMakeLists.txt  OrbitLib.cpp  OrbitLib.h
OrbitLibTest/: CMakeLists.txt  main.cpp
OrbitLinuxTracing/: PerfEvent.h  PerfEventOpen.cpp  PerfEventOpen.h  PerfEventRecords.h  TracerThread.cpp  TracerThread.h  UprobesFunctionCallManager.h  UprobesReturnAddressManager.h  UprobesUnwindingVisitor.cpp  UprobesUnwindingVisitor.h
OrbitQt/: CMakeLists.txt  capturetoolbar.ui  geometryengine.cpp  geometryengine.h  main.cpp  orbitcodeeditor.cpp  orbitdataviewpanel.cpp  orbitglwidget.cpp  orbitglwidget.h  orbitglwidgetwithheader.cpp  orbitlivefunctions.cpp  orbitmainwindow.cpp  orbitmainwindow.h  orbitmainwindow.ui  orbittreeview.cpp  orbittreeview.h  servicedeploymanager.cpp
OrbitService/: LinuxTracingGrpcHandler.cpp  LinuxTracingGrpcHandler.h
OrbitSsh/: Socket.cpp
OrbitSshQt/: Tunnel.cpp
OrbitTest/: CMakeLists.txt  OrbitTest.cpp  OrbitTest.h
cmake/: FindANGLE.cmake  FindLLVM.cmake  FindOrbitLib.cmake  Findglues.cmake  Findkrabsetw.cmake  Findlibprotobuf-mutator.cmake  grpc_helper.cmake
conan/profiles/: arm64-linux-cross
docker/: Dockerfile.arm64-cross
docs/: building_arm64.md
kokoro/builds/: build.sh
protos/: capture.proto
scripts/: test_python_profiling.py
src/Api/: CMakeLists.txt  Orbit.cpp  OrbitApiVersions.h
src/ApiInterface/: CMakeLists.txt  (+2 more)
src/ApiTestC/: ApiTestC.c  ApiTestC.h  CMakeLists.txt  main.c
src/GrpcFlatBuffers/: CMakeLists.txt  process.fbs  producer_side_services.fbs  services.fbs  services_ggp.fbs  symbol.fbs
src/GrpcFlatBuffers/include/GrpcFlatBuffers/: Constants.h
src/GrpcProtos/: CMakeLists.txt  capture.proto  instrumentation.proto  process.proto  services.proto  symbol.proto
src/GrpcProtos/include/GrpcProtos/: Constants.h
src/GrpcProtos/schemas/: capture.fbs  code_block.fbs  module.fbs  tracepoint.fbs
src/Introspection/: CMakeLists.txt  DebugManager.cpp  DebugUtils.cpp  DebugUtilsTest.cpp  Introspection.cpp  IntrospectionTest.cpp  StaticToggle.cpp
src/Introspection/include/Introspection/: DebugManager.h  DebugUtils.h  Introspection.h  StaticToggle.h
src/ObjectUtils/: CMakeLists.txt  CoffFile.cpp  CoffFileTest.cpp  ElfFile.cpp  ElfFileTest.cpp  LinuxMap.cpp  ObjectFile.cpp  PdbBenchmarkMain.cpp  PdbFile.cpp  PdbFileDia.cpp  PdbFileDia.h  PdbFileLlvm.cpp  PdbFileLlvm.h  PdbFileLlvmTest.cpp  PdbFileRaw.cpp  PdbFileRaw.h  PdbFileRawTest.cpp  PdbFileTest.h  PdbUtilsDia.cpp  SymbolsFile.cpp
src/ObjectUtils/include/ObjectUtils/: ElfFile.h  PdbFile.h  SymbolsFile.h
src/WindowsApiShim/: CMakeLists.txt  CaptureController.cpp  CaptureController.h  FileWriter.cpp  FileWriter.h  FunctionIdGenerator.cpp  FunctionIdGenerator.h  NamespaceDispatcher.h  WinMdCache.cpp  WinMdCache.h  WinMdHelper.cpp  WinMdHelper.h  WindowsApiCallManager.cpp  WindowsApiCallManager.h  WindowsApiShim.asm  WindowsApiShim.cpp  WindowsApiShimGenerator.cpp  WindowsApiShimUtils.h  WindowsMetadataHelper.cpp  WindowsMetadataHelper.h  main.cpp
src/WindowsApiShim/include/WindowsApiShim/: WindowsApiShim.h
src/WindowsApiTracing/: CMakeLists.txt  WindowsApiTracing.cpp  WindowsApiTracingTest.cpp
src/WindowsApiTracing/include/WindowsApiTracing/: WindowsApiTracing.h
src/WindowsApiTracing/testdata/: file.txt
src/WindowsService/: CMakeLists.txt  CaptureEventSender.h  CaptureServiceImpl.cpp  CaptureStartStopListener.h  OrbitGrpcServer.cpp  OrbitGrpcServer.h  OrbitService.cpp  ProcessList.cpp  ProcessList.h  ProcessServiceImpl.cpp  WindowsTracingHandler.cpp  WindowsTracingHandler.h  main.cpp
src/WindowsTracing/: CMakeLists.txt  ContextSwitchManager.cpp  ContextSwitchManager.h  ContextSwitchTest.cpp  DynamicInstrumentation.cpp  DynamicInstrumentation.h  EtwUtils.cpp  EtwUtils.h  EventCallbacks.cpp  EventTracer.cpp  EventTypes.h  KrabsStackWalkProvider.h  KrabsTracer.cpp  KrabsTracer.h  KrabsTracerTest.cpp  KrabsUtils.h  ListModulesEtw.cpp  MockTracerListener.h  Os.cpp  Os.h  Tracer.cpp  TracerImpl.cpp  TracerImpl.h  WindowsApiTracing.cpp  WindowsApiTracing.h  WindowsApiTracingTest.cpp  WindowsTracing.cpp  main.cpp
src/WindowsTracing/include/WindowsTracing/: ClockUtils.h  Etw.h  EventCallbacks.h  EventGuid.h  EventTracer.h  EventTypes.h  KrabsTracer.h  Tracer.h  TracerListener.h  TracingContext.h  WindowsTracing.h
src/WindowsUserSpaceInstrumentation/: CMakeLists.txt  FunctionCallEventProducer.h  FunctionEntryExitEventProducer.h  WindowsUserSpaceInstrumentation.cpp
src/WindowsUserSpaceInstrumentation/include/WindowsUserSpaceInstrumentation/: WindowsUserSpaceInstrumentation.h
(+235 files in other folders)
