# Copyright (c) 2021 The Orbit Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

cmake_minimum_required(VERSION 3.15)

project(WindowsApiShim)

add_executable(WindowsApiShimGenerator)
target_compile_features(WindowsApiShimGenerator PUBLIC cxx_std_17)

target_sources(WindowsApiShimGenerator PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}/WindowsApiShimGenerator.cpp)

target_link_libraries(WindowsApiShimGenerator PUBLIC
        OrbitBase
        CONAN_PKG::abseil
        CONAN_PKG::outcome
        cppwin32::cppwin32)

add_library(WindowsApiShim STATIC)

target_compile_features(WindowsApiShim PUBLIC cxx_std_17)

target_include_directories(WindowsApiShim PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
        ${CMAKE_CURRENT_BINARY_DIR}/generated/)

file(GLOB WINDOWS_API_SHIM_HEADERS
     ${CMAKE_CURRENT_BINARY_DIR}/generated/win32/*.h)

file(GLOB WINDOWS_API_SHIM_HEADERS CONFIGURE_DEPENDS 
    ${CMAKE_CURRENT_BINARY_DIR}/generated/win32/*.h)

file(GLOB WINDOWS_API_SHIM_SOURCES
     ${CMAKE_CURRENT_BINARY_DIR}/generated/win32/impl/*.h
     ${CMAKE_CURRENT_BINARY_DIR}/generated/win32/impl/*.cpp)

file(GLOB WINDOWS_API_SHIM_SOURCES CONFIGURE_DEPENDS 
    ${CMAKE_CURRENT_BINARY_DIR}/generated/win32/impl/*.h
    ${CMAKE_CURRENT_BINARY_DIR}/generated/win32/impl/*.cpp)

target_include_directories(WindowsApiShim PUBLIC
        ${CMAKE_CURRENT_BINARY_DIR}/generated/
        ${CMAKE_CURRENT_LIST_DIR}/include/)

target_sources(WindowsApiShim PUBLIC
        ${WINDOWS_API_SHIM_HEADERS})

target_sources(WindowsApiShim PRIVATE
        ${WINDOWS_API_SHIM_SOURCES})

target_link_libraries(WindowsApiShim PUBLIC
        OrbitBase
        CONAN_PKG::abseil)

# CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
# CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
# ${CMAKE_BINARY_DIR}/src/WindowsApiShim/

# WindowsApiShim relies on code generated by WindowsApiShimGenerator.
add_dependencies(WindowsApiShim WindowsApiShimGenerator)

message( STATUS "CMAKE_CURRENT_BINARY_DIR  = ${CMAKE_CURRENT_BINARY_DIR}")

#fatal error C1128: number of sections exceeded object file format limit: compile with /bigobj
add_definitions(/bigobj)


# Run WindowsApiShimGenerator before building WindowsApiShim.
#add_custom_command(TARGET WindowsApiShim
#    PRE_BUILD
#    COMMAND odb -o /home/david/dev/ --std c++11 -I/home/david/dev/ -d sqlite --generate-    query --generate-schema ${PROMOTER_LIB_PREFIX}/entities/person.hpp
#    DEPENDS WindowsApiShimGenerator
#    VERBATIM
#)



add_library(WindowsApiShimDll SHARED)

target_compile_features(WindowsApiShimDll PUBLIC cxx_std_17)

target_sources(WindowsApiShimDll PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}/include/WindowsApiShim/WindowsApiShim.h)

target_sources(WindowsApiShimDll PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/WindowsApiShim.cpp)

target_link_libraries(WindowsApiShimDll PUBLIC
        WindowsApiShim)

